<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/source_place_list_item_parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/source_place_list_item_guideLine_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/source_place_list_item_guideLine_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/source_place_list_item_guideLine_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_place_recyclerView_item_guildLine_horizontal1_top"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/source_place_list_item_guideLine_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_place_recyclerView_item_guildLine_horizontal2_top"
        />

    <TextView
        android:id="@+id/source_place_list_place_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal1"
        app:layout_constraintRight_toLeftOf="@id/source_place_list_item_guideLine_vertical1"
        android:layout_marginLeft="@dimen/margin_place_recyclerView_item_text_name_left"
        android:layout_marginStart="@dimen/margin_place_recyclerView_item_text_name_left"
        android:textSize="@dimen/size_regular"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_square_eb"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/text_dynamic"
         />
    <ImageView
        android:id="@+id/source_place_list_item_icon"
        android:layout_width="@dimen/margin_place_recyclerView_item_guildLine_horizontal1_top"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/source_place_list_item_category"
        app:layout_constraintTop_toTopOf="@id/source_place_list_item_category"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal2"
        android:scaleType="fitCenter"
        android:contentDescription="@string/ImageViewDynamic"
        />
    <TextView
        android:id="@+id/source_place_list_item_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/source_place_list_item_icon"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal2"
        app:layout_constraintRight_toLeftOf="@id/source_place_list_item_guideLine_vertical1"
        android:layout_marginTop="@dimen/margin_place_recyclerView_item_text_interval"
        android:textSize="@dimen/size_thin"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_square_b"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/text_dynamic"
        />
    <ImageView
        android:id="@+id/source_place_list_item_phone_image"
        android:layout_width="@dimen/size_place_recyclerView_item_image_phone"
        android:layout_height="@dimen/size_place_recyclerView_item_image_phone"
        app:layout_constraintLeft_toRightOf="@id/source_place_list_item_guideLine_vertical2"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal1"
        android:contentDescription="@string/ImageViewDynamic"
        android:src="@drawable/image_icon_phone_icon"
        android:scaleType="centerCrop"
        />
    <ImageView
        android:id="@+id/source_place_list_item_distance_image"
        android:layout_width="@dimen/size_place_recyclerView_item_image_distance"
        android:layout_height="@dimen/size_place_recyclerView_item_image_distance"
        app:layout_constraintLeft_toRightOf="@id/source_place_list_item_guideLine_vertical2"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal2"
        android:contentDescription="@string/ImageViewDynamic"
        android:src="@drawable/image_distance_icon"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/source_place_list_item_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/source_place_list_item_phone_image"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal1"
        android:layout_marginLeft="@dimen/margin_place_recyclerView_item_text_and_image_interval"
        android:layout_marginStart="@dimen/margin_place_recyclerView_item_text_and_image_interval"
        android:textSize="@dimen/size_thin"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_square_b"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/text_dynamic"
         />
    <TextView
        android:id="@+id/source_place_list_item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/source_place_list_item_guideLine_horizontal2"
        app:layout_constraintLeft_toRightOf="@id/source_place_list_item_distance_image"
        android:layout_marginLeft="@dimen/margin_place_recyclerView_item_text_and_image_interval"
        android:layout_marginStart="@dimen/margin_place_recyclerView_item_text_and_image_interval"
        android:textSize="@dimen/size_thin"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_square_b"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/text_dynamic"
         />
    <ImageView
        android:layout_width="148dp"
        android:layout_height="6dp"
        app:layout_constraintTop_toBottomOf="@id/source_place_list_item_guideLine_horizontal2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/rectangle_round"
        android:contentDescription="@string/ImageViewStatic"
        android:layout_marginTop="10dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>